# fastui-blog-jumpstart-kit

./: README.md  pyproject.toml
app/: blog.yml  components.py  data_models.py  file_reader.py  main.py
app/articles/markdown_f/: markdown_demo_post.md
app/articles/python_f/: python_demo_post.py
app/templates/: __init__.py  article_template_0.py  homepage_template_0.py
